<resources>
    <string name="app_name">BoardGameApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- Strings related EventFragment -->
    <string name="suggest_a_game">SUGGEST A GAME</string>
    <string name="games_voting">GAMES VOTING</string>
    <string name="attendence">ATTENDENCE</string>
    <string name="i_m_delayed">I\'M DELAYED</string>
    <string name="host_rating">HOST RATING</string>
    <string name="enter_event">ENTER EVENT</string>
    <string name="attendies">Attendies</string>
    <string name="game_night">Game Night</string>
    <string name="food">FOOD</string>
    <string name="hostet_by">Hosted by %1s</string>
    <string name="host_and_night_details">Your host is %1s</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="rate_the_host">RATE THE HOST</string>
    <string name="submit">Submit</string>
    <string name="total_rating_1d">Total rating: (%.3s)</string>
    <string name="name">%1s</string>
    <string name="address">%1s</string>
    <string name="please_suggest_a_game">Please suggest a game</string>

    <!-- Strings related UpcomingEventFragment -->
    <string name="upcoming_hosting_event_text">Upcoming hosting Event: %1s</string>
    <string name="favorite_game_text">Favorite Game: %1s</string>
    <string name="favorite_food_text">Favorite Food: %1s</string>
    <string name="username">%1s</string>
    <string name="acceptedAttendence">%1s</string>
    <string name="cancelledAttendence">%1s</string>
    <string name="confirm">Confirm</string>

    <!-- Strings related ChooseGame-->
    <string name="what_do_you_want_to_play">What do you want to play?</string>
    <string name="go_to_profile_button">Go to profile Button</string>
    <string name="refuse_event">refuse event</string>
    <string name="close_dialog">Close Dialog</string>
    <string name="_15min">15min</string>
    <string name="_30min">30min</string>
    <string name="_45min">45min</string>
    <string name="_1h">1h</string>
    <string name="add_new_event">Add new Event</string>
    <string name="select_a_foodstyle">Select a foodstyle</string>
    <string name="eventScreen_explanation_text">Hey there, good to see you!\n\nPlease select a game you want to play, choose some foodstyle for the night and provide the host some feedback if you will attend or not. Please also vote for your favourite game when the voting is open. After the event please rate the host.\n\nThank’s and have a wonderful game night!</string>
    <string name="event_details">Event details</string>
    <string name="date">Date: %1s</string>
    <string name="vote_for_a_game">Vote for a game</string>
    <string name="what_do_you_want_to_eat">What do you want to eat?</string>
    <string name="suggested_games_1s">Suggested games:\n %1s</string>
    <string name="suggested_games_empty">Please suggest a game</string>
    <string name="cancelled">Cancelled:</string>
    <string name="confirmed">Confirmed:</string>
    <string name="refuse">Refuse</string>
    <string name="accept">Accept</string>
    <string name="notify_others_about_your_delay">Notify others about your delay</string>
    <string name="_60_min">60 min</string>
    <string name="_60min">60min</string>
    <string name="suggested_foodstyles_n_1s">Suggested foodstyles:\n %1s</string>

    />

</resources>