<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/chG_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/what_do_you_want_to_play"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chG_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/please_suggest_a_game"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/chG_title"
        app:layout_constraintTop_toBottomOf="@+id/chG_title" />


    <Spinner
        android:id="@+id/chG_spinner"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/chG_title"
        app:layout_constraintTop_toBottomOf="@+id/chG_subtitle"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    <Button
        android:id="@+id/chG_confirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chG_spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>
