...
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:minWidth="400dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/ue_title"
...
        <TextView
            android:id="@+id/ue_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/ue_title"
            app:layout_constraintEnd_toEndOf="@+id/ue_enter_event_button"
            app:layout_constraintTop_toTopOf="@+id/ue_title"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/attendies"
            android:layout_width="wrap_content"
...
