...
            android:id="@+id/profile_button"
            android:layout_width="52dp"
            android:layout_height="39dp"
            android:layout_marginTop="31dp"
            android:background="@drawable/profile"
            android:contentDescription="@string/go_to_profile_button"
            app:layout_constraintStart_toStartOf="@+id/suggestedGames"
            app:layout_constraintTop_toBottomOf="@+id/event_title" />

        <TextView
            android:id="@+id/date"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
...
            android:text="@string/suggested_foodstyles_n_1s"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintStart_toStartOf="@+id/explanation"
            app:layout_constraintTop_toBottomOf="@+id/suggestedGames" />

        <Button
            android:id="@+id/suggest_game_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/suggest_a_game"
            app:layout_constraintBottom_toTopOf="@+id/select_a_foodstyle"
...
